--- a/beansit-property-access-service-dev.properties
+++ b/beansit-property-access-service-dev.properties
@@ -1,2 +1,2 @@
-property-file.name=Dev
-property-file.description=Dev Environment Value !
+property-file.name=Dev New!
+property-file.description=Dev Environment Value Expecting Changes!
