--- a/beansit-property-access-service-dev.properties
+++ b/beansit-property-access-service-dev.properties
@@ -1,2 +1,2 @@
-property-file.name=Dev New!
-property-file.description=Dev Environment Value Expecting Changes!
+property-file.name=Dev New Changes!
+property-file.description=Dev Environment Value Expecting Changes - 1!
